syntax = "proto3";

import "transaction.proto";

package types;
option go_package = "../types";


message ParaLocalDbBlock {
    int64    height          = 1;
    bytes    mainHash        = 2;
    int64    mainHeight      = 3;
    bytes    parentMainHash  = 4;
    int64    blockTime       = 5;
    repeated Transaction txs = 6;
}


message ParaLocalDbBlockInfo {
    int64    height         = 1;
    string   mainHash       = 2;
    int64    mainHeight     = 3;
    string   parentMainHash = 4;
    int64    blockTime      = 5;
    repeated string txs     = 6;
}
